ft(get-all-product): get all product in the stock

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The backend of an e-commerce system",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
