--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemailer": "^6.1.1",
+    "stripe": "^6.31.1"
   },
   "devDependencies": {
     "dotenv": "^7.0.0",
