--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The backend of an e-commerce system",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon node server"
+    "start": "nodemon node server",
+    "test": "mocha test/**"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +18,13 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "nodemailer": "^6.1.1",
+    "sinon": "^7.3.2",
     "stripe": "^6.31.1",
     "validate.js": "^0.12.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^7.0.0",
     "nodemon": "^1.18.11"
   }
